# Console-Snake-Game

./: .gitignore  CMakeLists.txt  Makefile  README.md  ansi_codes.md  audio.c  audio.h  main  main.c  path.c  path.h
